chore: add admin medical facilities
